# promptmc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  test_openmc.py
.github/workflows/: ci.yml  publish.yml
docs/: cli-reference.md  installation.md  mcp.md  python-api.md  telemetry-and-audit.md
docs/design/: README.md  v0.1-cli.md  v0.2-mcp-server.md  v0.3-csg-schema.md  v0.4-reference-library.md  v0.5-composition-inspection.md  v0.6-physics-gate.md  v0.7-component-library.md  v0.8-constrained-generation.md  v0.9-observability-provenance.md
examples/: README.md  batch_spec.yaml  input.xml
examples/mcp/: README.md
examples/uo2_criticality/: README.md  settings.xml
paper/: paper.bib
scratch/: refactor_cli.py  refactor_cli_tests.py  refactor_errors.py  refactor_refs.py  refactor_telemetry.py  refactor_test_cli.py  refactor_types.py
src/openmc_wrapper/: __init__.py  assistant.py  batch.py  cli.py  openmc_integration.py  parallel.py  plugins.py  progress.py  resources.py  schema.py  visualization.py
src/promptmc/: __init__.py  _typing.py  assistant.py  batch.py  cli.py  errors.py  openmc_integration.py  parallel.py  performance.py  plugins.py  progress.py  provenance.py  resources.py  schema.py  telemetry.py  templates.py  visualization.py
src/promptmc/benchmarks/: __init__.py  _types.py  godiva.py  pwr_pin.py
src/promptmc/commands/: __init__.py  analyze.py  ask.py  batch.py  common.py  configure.py  doctor.py  info.py  plan.py  run.py  templates.py  validate.py
src/promptmc/examples/uo2_criticality/: README.md  geometry.xml  materials.xml  settings.xml
src/promptmc/geometry/: __init__.py  materials.py  primitives.py  tallies.py  xml_serializer.py
src/promptmc/mcp/: __init__.py  resources.py  schemas.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_assistant.py  test_batch.py  test_cli.py  test_cli_commands.py  test_doctor.py  test_errors.py  test_executable_run.py  test_geometry_benchmarks.py  test_geometry_primitives.py  test_mcp_integration.py  test_mcp_resources.py  test_mcp_schemas.py  test_mcp_tools.py  test_openmc_integration.py  test_optional_deps.py  test_parallel.py  test_performance.py  test_plugins.py  test_progress.py  test_provenance.py  test_public_api.py  test_resources.py  test_schema.py  test_telemetry.py  test_templates.py  test_visualization.py  test_xml_deserializer.py
