[tool.poetry]
name = "promptmc"
version = "0.3.2"
description = "Infrastructure for safely using OpenMC with LLMs: plan, build, validate, run, analyze"
authors = ["PromptMC Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rjonace/promptmc"
keywords = ["openmc", "monte-carlo", "nuclear-engineering", "simulation", "mcp", "particle-transport", "neutronics", "ai-validation", "mcp-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [{include = "promptmc", from = "src"}]
include = [{ path = "examples", format = ["sdist"] }]

[tool.poetry.urls]
"Changelog" = "https://github.com/rjonace/promptmc/blob/main/CHANGELOG.md"
"Issues" = "https://github.com/rjonace/promptmc/issues"

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.12.0"
rich = "^13.7.0"
pydantic = "^2.8.0"
h5py = "^3.11.0"
pyyaml = "^6.0.0"
psutil = "^6.0.0"
defusedxml = "^0.7.1"
opentelemetry-api = {version = "^1.26.0", optional = true}
opentelemetry-sdk = {version = "^1.26.0", optional = true}
opentelemetry-exporter-otlp = {version = "^1.26.0", optional = true}
tenacity = "^9.1.4"
mcp = ">=1.0.0"
google-genai = ">=0.1.0"

[tool.poetry.extras]
telemetry = ["opentelemetry-api", "opentelemetry-sdk", "opentelemetry-exporter-otlp"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
ruff = "^0.5.0"
pre-commit = "^3.7.0"
bandit = "^1.7.9"
types-PyYAML = "^6.0.0"
types-psutil = "^6.0.0"
types-defusedxml = "^0.7.0"
hypothesis = "^6.100.0"

[tool.poetry.scripts]
promptmc = "promptmc.cli:app"
promptmc-mcp = "promptmc.mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "D",   # pydocstyle (Google convention)
]
ignore = [
    "B008",   # Function calls in argument defaults (Typer pattern)
    "D100",   # Missing docstring in public module (handled per-file)
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__ (use class docstring)
    "D203",   # Conflicts with D211 (no-blank-line-before-class)
    "D213",   # Conflicts with D212 (multi-line-summary-first-line)
    "E501",   # Line too long (formatter handles code; strings are exempt per Google style)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/promptmc/cli.py" = ["ARG001", "D103", "E501"]
"src/promptmc/templates.py" = ["ARG002"]
"src/promptmc/openmc_integration.py" = ["ARG002"]
"tests/*" = ["ARG001", "ARG002", "D100", "D101", "D102", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "openmc.*",
    "h5py.*",
    "opentelemetry.*",
    "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "promptmc.telemetry"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=promptmc",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]
markers = [
    "integration: MCP integration tests",
    "requires_openmc: Tests that require openmc to be importable/installed",
    "requires_openmc_data: Tests that require openmc with cross-section data installed",
    "requires_openmc_exec: Tests that run the openmc executable (subprocess mode) and need OPENMC_CROSS_SECTIONS",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
